# Fluidis

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
rsc/shader/: shader.frag  shader.vert
src/: glad.c  main.c
src/render/: camera.c  camera.h  glbparser.c  glbparser.h  input.c  input.h  mesh.c  mesh.h  model.c  model.h  shader.c  shader.h  vertex.h  window.c  window.h
src/sim/LBM/: lbm.c  lbm.h
